[package]
name = "stream_eager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fn_graph = { version = "0.5.2", features = ["resman", "fn_meta"] }
resman = { version = "0.15.0", features = ["debug", "fn_res", "fn_meta"] }
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["rt", "rt-multi-thread", "time"] }
